--- a/main.tex
+++ b/main.tex
@@ -352,7 +352,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
-%\iffalse
+\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -380,9 +380,9 @@
 \include{commutative/week10}
 \include{commutative/week11}
 \include{commutative/week12}
-%\fi
+\fi
 \include{commutative/week13}
-\include{homology/week14}
+%\include{homology/week14}
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
