--- a/main.tex
+++ b/main.tex
@@ -151,6 +151,7 @@
 \let\foralltemp\forall
 \renewcommand*{\exists}{\existstemp\mkern4mu}
 \renewcommand*{\forall}{\foralltemp\mkern4mu}
+\newcommand*{\existsuniq}{\existstemp!\mkern4mu}
 
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
