Update hw week14, fix some minor bugs

--- a/multilinear/week11.tex
+++ b/multilinear/week11.tex
@@ -135,8 +135,8 @@ The right radical of $f:
     %\[
       %f(v, w) = \frac{1}{4}f(v+w,v+w) - \frac{1}{4}f(v-w,v-w) = 0
     %\]
-    {\color{red}
-      \[ f(v, w) = \frac{1}{2} \big( f(v+w,v+w) - f(v, v) - f(w, w) \big) = 0. \quad \footnote{The argument in class requires $\Char F \geq 4$, omimi...} \] }
+    \[ \color{red} f(v, w) = \frac{1}{2} \big( f(v+w,v+w) - f(v, v) - f(w, w) \big) = 0.
+     \quad \footnote{The argument in class requires $\Char F \geq 4$, omimi...} \]
     So $f = 0$, which is a contradiction.
 
     Now let $v_1 \in V$ with $f(v_1, v_1) \ne 0$. Let $W = \gen{v_1}_F$ and
@@ -269,7 +269,7 @@ If $n = 2$, $f$ is called a bilinear map.
   $M \otimes_R N$ with a bilinear map $\rho: M\times N \to M\otimes_R N$
   satisfying the following universal property:
 
-  for any $R$-momdule $W$ and any bilinear map $f: M\times N \to W$,
+  for any $R$-module $W$ and any bilinear map $f: M\times N \to W$,
   $\exists!$ $R$-module homomorphism $\varphi: M \otimes_R N \to W$,
   \[
     \begin{tikzcd}
