Minor fixes in hw week14

--- a/hw/week14.tex
+++ b/hw/week14.tex
@@ -23,7 +23,7 @@
 \begin{exercise}
   Show that $h(y) \in \Hom_\Zb(R, N_0), h \in \Hom_R(M_2, N)$ and $h \circ \alpha = f$.
 \end{exercise}
-o
+
 \begin{exercise}[Snake lemma]
   Suppose the following diagram commutes in $\Mod_R$.
   (two exact sequences)
@@ -55,6 +55,6 @@ o
 \end{exercise}
 
 \begin{exercise}
-  $0 \to C_\cdot \to \bar{C_\cdot} \to \tilde{C_\cdot} \to 0$ exact
+  $0 \to C_\bullet \to \bar{C_\bullet} \to \tilde{C_\bullet} \to 0$ exact
   will induce a long exact sequence.
 \end{exercise}
