--- a/main.tex
+++ b/main.tex
@@ -353,7 +353,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
-%\iffalse
+\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -381,8 +381,8 @@
 \include{commutative/week10}
 \include{commutative/week11}
 \include{commutative/week12}
-%\fi
 \include{commutative/week13}
+\fi
 \include{homology/week14}
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
